# ml-ai-framework

./: .gitignore  Makefile  README.md  ml-ai-framewaork.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  verify_implementation.sh
config/: __init__.py  settings.py
docs/: CONTRIBUTING.md  DEPLOYMENT.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS.md  QUICK_REFERENCE.md  VALIDATION_SUMMARY.md  code-review-report.md  research-findings.md
examples/: langgraph_workflow.py  simple_workflow.py
examples/advanced_workflow/: README.md  custom_agents.py  parallel_execution.py  streaming_example.py
examples/housing_regression/: README.md  run_crewai.py  run_langgraph.py
examples/iris_analysis/: README.md  run_crewai.py  run_langgraph.py
examples/quickstart/: 01_basic_workflow.py  02_custom_tools.py  03_error_handling.py  04_testing.py  README.md
src/: __init__.py  ag_ui_server.py
src/tools/: __init__.py  analysis_tools.py  data_tools.py  ml_tools.py
src/utils/: __init__.py  error_handling.py  logging.py
src/workflows/: __init__.py  crew_system.py  langgraph_system.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: sample_datasets.py
tests/integration/: test_crew_workflow.py  test_langgraph_workflow.py  test_llm_judge.py  test_parameterized.py  test_performance.py
tests/test_data/: README.md
tests/unit/: test_mocked_llm.py  test_models.py  test_tools.py
